--- a/index.html
+++ b/index.html
@@ -65,11 +65,13 @@
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:25%;vertical-align:middle">
     <div class="one">
-    <div class="two" id='difsurvey_image'><video  width=100% height=100% muted autoplay loop>
+    <!-- <div class="two" id='difsurvey_image'>
+      <video  width=100% height=100% muted autoplay loop>
     <source src="images/difsurvey_video.mp4" type="video/mp4">
     Your browser does not support the video tag.
-    </video></div>
-      <img src='images/difsurvey_image.jpg' width="160">
+    </video>
+  </div> -->
+      <img src='images/archi_shorten.png' width="160">
     </div>
     <script type="text/javascript">
       function difsurvey_start() {
