--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
 
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
-  <td style="padding:20px;width:25%;vertical-align:middle">
+  <td style="padding:20px;width:30%;vertical-align:middle">
     <div class="one">
     <!-- <div class="two" id='difsurvey_image'>
       <video  width=100% height=100% muted autoplay loop>
@@ -71,7 +71,7 @@
     Your browser does not support the video tag.
     </video>
   </div> -->
-      <img src='images/archi_shorten.png' width="160">
+      <img src='images/archi_shorten.png' width="180">
     </div>
     <script type="text/javascript">
       function difsurvey_start() {
@@ -85,36 +85,20 @@
     </script>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
-    <a href="https://arxiv.org/abs/2310.07204">
-      <span class="papertitle">State of the Art on Diffusion Models for Visual Computing
+
+      <span class="papertitle"> Correction of Motion Artifact in MRI with Contextual and Cross-space Fusion
 </span>
-    </a>
+    
     <br>
-	<a href="https://ryanpo.com/">Ryan Po</a>,
-	<a href="https://yifita.netlify.app/">Wang Yifan</a>,
-	<a href="https://people.mpi-inf.mpg.de/~golyanik/">Vladislav Golyanik</a>,
-	<a href="https://kfiraberman.github.io/">Kfir Aberman</a>,
-	<strong>Jonathan T. Barron</strong>,
-	<a href="https://www.cs.tau.ac.il/~amberman/">Amit H. Bermano</a>,
-	<a href="https://ericryanchan.github.io/">Eric Ryan Chan</a>,
-	<a href="https://www.weizmann.ac.il/math/dekel/home">Tali Dekel</a>,
-	<a href="https://holynski.org/">Aleksander Holynski</a>,
-	<a href="https://people.eecs.berkeley.edu/~kanazawa/">Angjoo Kanazawa</a>,
-	<a href="https://tml.stanford.edu/">C. Karen Liu</a>,
-	<a href="https://lingjie0206.github.io/">Lingjie Liu</a>,
-	<a href="https://bmild.github.io/">Ben Mildenhall</a>,
-    <a href="https://www.niessnerlab.org/">Matthias Nießner</a>,
-	<a href="https://ommer-lab.com/people/ommer/">Björn Ommer</a>,
-	<a href="https://people.mpi-inf.mpg.de/~theobalt/">Christian Theobalt</a>,
-	<a href="https://peterwonka.net/">Peter Wonka</a>,
-    <a href="https://stanford.edu/~gordonwz/">Gordon Wetzstein</a>
+	Guo Jiang, <strong>Ziniu Zhang</strong>, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
+	
     <br>
-	<em>arXiv<em>, 2023
+	<em> 2023</em> [<a href="https://cmt3.research.microsoft.com/ICCV2023/Submission/Summary/11970">paper</a>]
     <br>
     <p></p>
-    <p>
+    <!-- <p>
     A survey of recent progress in diffusion models for images, videos, and 3D.
-    </p>
+    </p> -->
           </tbody></table>
 
           
