--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                   Hi there! I am a senior student majoring in Computer Science and Technology(Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
                 </p>
                 <p>
-                  Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
+                  Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. After that, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
                 </p>
                 <p>
-                  Currently, I'm a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. I also colaborate closely with <a href="https://cliangyu.com/">Liangyu Chen</a> in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a> working on multimodal agents. 
+                  Currently, I am fortunate to be a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a> working on multimodal agents. 
                 <p style="text-align:center">
                   <a href="mailto:michaelzhangziniu@gmail.com">Email</a> &nbsp;/&nbsp;
                   <!-- <a href="data/JonBarron-CV.pdf">CV</a> &nbsp;/&nbsp;
