--- a/index.html
+++ b/index.html
@@ -133,6 +133,8 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Service</h2>
 <!-- 		<p> -->
+		- Volunteer in the 10th China Collegiate Programming Contest(CCPC) Final.
+		<br>
                 - Director of 2022 UESTC ACM-ICPC Training Project in Dynamic Programming.
 		<br>
 <!-- 		</p><p> -->
