--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	Guo Jiang, <strong>Ziniu Zhang</strong>, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
 	
     <br>
-	<em> 2023</em> [<a href="https://cmt3.research.microsoft.com/ICCV2023/Submission/Summary/11970">paper</a>]
+	<em> 2023</em> [<a href="https://github.com/MichaelZona/FusionGAN/blob/main/MRI_FusionGAN__ICCV_.pdf">paper</a>] [<a href="https://github.com/MichaelZona/FusionGAN/blob/main">project</a>]
     <br>
     <p></p>
     <!-- <p>
