--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 </p>
                 <!-- Hi there! I am **Ziniu Zhang (张子牛)**, a simple senior student majoring in Computer Science and Technology at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China</a>. My interests span across computer vision and deep learning. I am privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> supervised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a> during my undergraduate journey. Additionally, I spend two unforgettable years in the UESTC ACM-ICPC university team, advised by <a href="https://www.x-mol.com/university/faculty/158445">Prof. Peng Yang</a>. I have recieved the internship in <a href="https://www.ntu.edu.sg/">Nanyang Technological University</a> for a long time and am now an extrange student in <a href="https://www.uq.edu.au/">The University of Queensland</a>. I warmly welcome anyone who shares similar interests to contact. Cheers!    <br> **Email：** <michaelzhangziniu@gmail.com> <br><br> -->
                 <p>
-                  Hi there! I am a senior student majoring in Computer Science and Technology(Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
+                  Hi there! I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
                 </p>
                 <p>
                   Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. After that, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
@@ -103,6 +103,53 @@
     </p> -->
           </tbody></table>
 
+
+
+<tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
+  <td style="padding:20px;width:30%;vertical-align:middle">
+    <div class="one">
+    <!-- <div class="two" id='difsurvey_image'>
+      <video  width=100% height=100% muted autoplay loop>
+    <source src="images/difsurvey_video.mp4" type="video/mp4">
+    Your browser does not support the video tag.
+    </video>
+  </div> -->
+  <br>
+  <br>
+      <img src='images/archi_shorten.png' width="180">
+    </div>
+    <script type="text/javascript">
+      function difsurvey_start() {
+        document.getElementById('difsurvey_image').style.opacity = "1";
+      }
+
+      function difsurvey_stop() {
+        document.getElementById('difsurvey_image').style.opacity = "0";
+      }
+      difsurvey_stop()
+    </script>
+  </td>
+  <td style="padding:20px;width:70%;vertical-align:middle">
+
+      <span class="papertitle"> MMInA: Benchmarking Multihop Multimodal Internet Agents
+</span>
+    
+    <br>
+	Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu 
+	  <br>
+	  (* equal contribution)
+	
+    <br>
+	<em> Preprint 2024</em> [<a href="https://arxiv.org/abs/2404.09992">paper</a>] [<a href="https://mmina.cliangyu.com/">project</a>]
+    <br>
+    <p></p>
+    <!-- <p>
+    A survey of recent progress in diffusion models for images, videos, and 3D.
+    </p> -->
+          </tbody></table>
+
+
+		
           
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
             <tr>
