--- a/index.html
+++ b/index.html
@@ -61,16 +61,10 @@
             </tr>
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
+<!-- 
 <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
   <td style="padding:20px;width:30%;vertical-align:middle">
     <div class="one">
-    <!-- <div class="two" id='difsurvey_image'>
-      <video  width=100% height=100% muted autoplay loop>
-    <source src="images/difsurvey_video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video>
-  </div> -->
   <br>
   <br>
       <img src='images/archi_shorten.png' width="180">
@@ -98,55 +92,149 @@
 	<em> 2023</em> [<a href="https://github.com/MichaelZona/FusionGAN/blob/main/MRI_FusionGAN__ICCV_.pdf">paper</a>] [<a href="https://github.com/MichaelZona/FusionGAN/blob/main">project</a>]
     <br>
     <p></p>
-    <!-- <p>
-    A survey of recent progress in diffusion models for images, videos, and 3D.
-    </p> -->
-          </tbody></table>
+          </tbody></table> -->
 
+ <tr onmouseout="recon_stop()" onmouseover="recon_stopt()" bgcolor="#ffffd0">
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id='recon_image'><video  width=100% height=100% muted autoplay loop>
+          <source src="images/recon.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video></div>
+          <img src='images/recon.png' width="160">
+        </div>
+        <script type="text/javascript">
+          function recon_start() {
+            document.getElementById('recon_image').style.opacity = "1";
+          }
 
+          function recon_stop() {
+            document.getElementById('recon_image').style.opacity = "0";
+          }
+          recon_stop()
+        </script>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://reconfusion.github.io/">
+			<span class="papertitle">ReconFusion: 3D Reconstruction with Diffusion Priors</span>
+        </a>
+        <br>
+        <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
+		<a href="https://bmild.github.io/">Ben Mildenhall*</a>,
+        <a href="https://henzler.github.io/">Philipp Henzler</a>,
+        <a href="https://keunhong.com/">Keunhong Park</a>,
+        <a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
+        <a href="https://scholar.google.com/citations?user=_pKKv2QAAAAJ&hl=en/">Daniel Watson</a>,
+        <a href="https://pratulsrinivasan.github.io/">Pratul P. Srinivasan</a>,
+        <a href="https://dorverbin.github.io/">Dor Verbin</a>,
+		<strong>Jonathan T. Barron</strong>,
+        <a href="https://poolio.github.io/">Ben Poole</a>,
+        <a href="https://holynski.org/">Aleksander Holynski*</a>
+        <br>
+        <em>CVPR</em>, 2024
+        <br>
+        <a href="https://reconfusion.github.io/">project page</a>
+        /
+        <a href="https://arxiv.org/abs/">arXiv</a>
+        <p></p>
+        <p>
+        Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
+        </p>
+      </td>
+    </tr>
 
-<tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()">
-  <td style="padding:20px;width:30%;vertical-align:middle">
-    <div class="one">
-    <!-- <div class="two" id='difsurvey_image'>
-      <video  width=100% height=100% muted autoplay loop>
-    <source src="images/difsurvey_video.mp4" type="video/mp4">
-    Your browser does not support the video tag.
-    </video>
-  </div> -->
-  <br>
-  <br>
-      <img src='images/archi_shorten.png' width="180">
-    </div>
-    <script type="text/javascript">
-      function difsurvey_start() {
-        document.getElementById('difsurvey_image').style.opacity = "1";
-      }
+		
+ <tr onmouseout="recon_stop()" onmouseover="recon_stopt()" bgcolor="#ffffd0">
+      <td style="padding:20px;width:25%;vertical-align:middle">
+        <div class="one">
+          <div class="two" id='recon_image'><video  width=100% height=100% muted autoplay loop>
+          <source src="images/recon.mp4" type="video/mp4">
+          Your browser does not support the video tag.
+          </video></div>
+          <img src='images/recon.png' width="160">
+        </div>
+        <script type="text/javascript">
+          function recon_start() {
+            document.getElementById('recon_image').style.opacity = "1";
+          }
 
-      function difsurvey_stop() {
-        document.getElementById('difsurvey_image').style.opacity = "0";
-      }
-      difsurvey_stop()
-    </script>
-  </td>
-  <td style="padding:20px;width:70%;vertical-align:middle">
+          function recon_stop() {
+            document.getElementById('recon_image').style.opacity = "0";
+          }
+          recon_stop()
+        </script>
+      </td>
+      <td style="padding:20px;width:75%;vertical-align:middle">
+        <a href="https://reconfusion.github.io/">
+			<span class="papertitle">ReconFusion: 3D Reconstruction with Diffusion Priors</span>
+        </a>
+        <br>
+        <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
+		<a href="https://bmild.github.io/">Ben Mildenhall*</a>,
+        <a href="https://henzler.github.io/">Philipp Henzler</a>,
+        <a href="https://keunhong.com/">Keunhong Park</a>,
+        <a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
+        <a href="https://scholar.google.com/citations?user=_pKKv2QAAAAJ&hl=en/">Daniel Watson</a>,
+        <a href="https://pratulsrinivasan.github.io/">Pratul P. Srinivasan</a>,
+        <a href="https://dorverbin.github.io/">Dor Verbin</a>,
+		<strong>Jonathan T. Barron</strong>,
+        <a href="https://poolio.github.io/">Ben Poole</a>,
+        <a href="https://holynski.org/">Aleksander Holynski*</a>
+        <br>
+        <em>CVPR</em>, 2024
+        <br>
+        <a href="https://reconfusion.github.io/">project page</a>
+        /
+        <a href="https://arxiv.org/abs/">arXiv</a>
+        <p></p>
+        <p>
+        Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
+        </p>
+      </td>
+    </tr>
 
-      <span class="papertitle"> MMInA: Benchmarking Multihop Multimodal Internet Agents
-</span>
+<!-- <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()"> -->
+<!--   <td style="padding:20px;width:30%;vertical-align:middle"> -->
+<!--     <div class="one"> -->
+<!--     <!-- <div class="two" id='difsurvey_image'> -->
+<!--       <video  width=100% height=100% muted autoplay loop> -->
+<!--     <source src="images/difsurvey_video.mp4" type="video/mp4"> -->
+<!--     Your browser does not support the video tag. -->
+<!--     </video> -->
+<!--   </div> --> -->
+<!--   <br> -->
+<!--   <br> -->
+<!--       <img src='images/archi_shorten.png' width="180"> -->
+<!--     </div> -->
+<!--     <script type="text/javascript"> -->
+<!--       function difsurvey_start() { -->
+<!--         document.getElementById('difsurvey_image').style.opacity = "1"; -->
+<!--       } -->
+
+<!--       function difsurvey_stop() { -->
+<!--         document.getElementById('difsurvey_image').style.opacity = "0"; -->
+<!--       } -->
+<!--       difsurvey_stop() -->
+<!--     </script> -->
+<!--   </td> -->
+<!--   <td style="padding:20px;width:70%;vertical-align:middle"> -->
+
+<!--       <span class="papertitle"> MMInA: Benchmarking Multihop Multimodal Internet Agents -->
+<!-- </span> -->
     
-    <br>
-	Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu 
-	  <br>
-	  (* equal contribution)
+<!--     <br> -->
+<!-- 	Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu  -->
+<!-- 	  <br> -->
+<!-- 	  (* equal contribution) -->
 	
-    <br>
-	<em> Preprint 2024</em> [<a href="https://arxiv.org/abs/2404.09992">paper</a>] [<a href="https://mmina.cliangyu.com/">project</a>]
-    <br>
-    <p></p>
+<!--     <br> -->
+<!-- 	<em> Preprint 2024</em> [<a href="https://arxiv.org/abs/2404.09992">paper</a>] [<a href="https://mmina.cliangyu.com/">project</a>] -->
+<!--     <br> -->
+<!--     <p></p> -->
     <!-- <p>
     A survey of recent progress in diffusion models for images, videos, and 3D.
     </p> -->
-          </tbody></table>
+<!--           </tbody></table> -->
 
 
 		
