--- a/index.html
+++ b/index.html
@@ -95,10 +95,10 @@
           </tbody></table> -->
 
 <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-  <td style="padding:20px;width:25%;vertical-align:middle">
-    <div class="one">
+  <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+    <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
       <!-- 替换为静态图像 -->
-      <img src='images/archi_shorten.png' width="160">
+      <img src='/a/img.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
@@ -130,6 +130,7 @@
     </p>
   </td>
 </tr>
+
 
 		
  <tr onmouseout="recon_stop()" onmouseover="recon_stopt()" bgcolor="#ffffd0">
