--- a/index.html
+++ b/index.html
@@ -102,12 +102,13 @@
     </div>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
-    <a href="https://reconfusion.github.io/">
-      <span class="papertitle">ReconFusion: 3D Reconstruction with Diffusion Priors</span>
-    </a>
+<!--     <a href="https://reconfusion.github.io/"> -->
+      <span class="papertitle">Correction of Motion Artifact in MRI with Contextual and Cross-space Fusion</span>
+<!--     </a> -->
     <br>
     <!-- 作者等信息 -->
-    <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
+	  Guo Jiang, Ziniu Zhang, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
+<!--     <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
     <a href="https://bmild.github.io/">Ben Mildenhall*</a>,
     <a href="https://henzler.github.io/">Philipp Henzler</a>,
     <a href="https://keunhong.com/">Keunhong Park</a>,
@@ -117,17 +118,17 @@
     <a href="https://dorverbin.github.io/">Dor Verbin</a>,
     <strong>Jonathan T. Barron</strong>,
     <a href="https://poolio.github.io/">Ben Poole</a>,
-    <a href="https://holynski.org/">Aleksander Holynski*</a>
+    <a href="https://holynski.org/">Aleksander Holynski*</a> -->
     <br>
-    <em>CVPR</em>, 2024
+    2023
     <br>
-    <a href="https://reconfusion.github.io/">project page</a>
+    <a href="https://github.com/MichaelZona/FusionGAN/blob/main">project</a>
     /
-    <a href="https://arxiv.org/abs/">arXiv</a>
+    <a href="https://github.com/MichaelZona/FusionGAN/blob/main/MRI_FusionGAN__ICCV_.pdf">Paper</a>
     <p></p>
-    <p>
+<!--     <p>
     Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
-    </p>
+    </p> -->
   </td>
 </tr>
 
