--- a/index.html
+++ b/index.html
@@ -108,17 +108,6 @@
     <br>
     <!-- 作者等信息 -->
 	  Guo Jiang, Ziniu Zhang, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
-<!--     <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
-    <a href="https://bmild.github.io/">Ben Mildenhall*</a>,
-    <a href="https://henzler.github.io/">Philipp Henzler</a>,
-    <a href="https://keunhong.com/">Keunhong Park</a>,
-    <a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
-    <a href="https://scholar.google.com/citations?user=_pKKv2QAAAAJ&hl=en/">Daniel Watson</a>,
-    <a href="https://pratulsrinivasan.github.io/">Pratul P. Srinivasan</a>,
-    <a href="https://dorverbin.github.io/">Dor Verbin</a>,
-    <strong>Jonathan T. Barron</strong>,
-    <a href="https://poolio.github.io/">Ben Poole</a>,
-    <a href="https://holynski.org/">Aleksander Holynski*</a> -->
     <br>
     2023
     <br>
@@ -132,56 +121,33 @@
   </td>
 </tr>
 
+<tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
+  <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+    <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
+      <!-- 替换为静态图像 -->
+      <img src='images/archi_shorten.png' style="max-height: 100%; max-width: 100%;">
+    </div>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+<!--     <a href="https://reconfusion.github.io/"> -->
+      <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents Dataset</span>
+<!--     </a> -->
+    <br>
+    <!-- 作者等信息 -->
+	  Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu
+    <br>
+    Preprint 2024
+    <br>
+    <a href="mmina.cliangyu.com">project</a>
+    /
+    <a href="https://arxiv.org/abs/2404.09992">Paper</a>
+    <p></p>
+<!--     <p>
+    Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
+    </p> -->
+  </td>
+</tr>
 
-		
- <tr onmouseout="recon_stop()" onmouseover="recon_stopt()" bgcolor="#ffffd0">
-      <td style="padding:20px;width:25%;vertical-align:middle">
-        <div class="one">
-          <div class="two" id='recon_image'><video  width=100% height=100% muted autoplay loop>
-          <source src="images/recon.mp4" type="video/mp4">
-          Your browser does not support the video tag.
-          </video></div>
-          <img src='images/recon.png' width="160">
-        </div>
-        <script type="text/javascript">
-          function recon_start() {
-            document.getElementById('recon_image').style.opacity = "1";
-          }
-
-          function recon_stop() {
-            document.getElementById('recon_image').style.opacity = "0";
-          }
-          recon_stop()
-        </script>
-      </td>
-      <td style="padding:20px;width:75%;vertical-align:middle">
-        <a href="https://reconfusion.github.io/">
-			<span class="papertitle">ReconFusion: 3D Reconstruction with Diffusion Priors</span>
-        </a>
-        <br>
-        <a href="https://www.cs.columbia.edu/~rundi/">Rundi Wu*</a>,
-		<a href="https://bmild.github.io/">Ben Mildenhall*</a>,
-        <a href="https://henzler.github.io/">Philipp Henzler</a>,
-        <a href="https://keunhong.com/">Keunhong Park</a>,
-        <a href="https://ruiqigao.github.io/">Ruiqi Gao</a>,
-        <a href="https://scholar.google.com/citations?user=_pKKv2QAAAAJ&hl=en/">Daniel Watson</a>,
-        <a href="https://pratulsrinivasan.github.io/">Pratul P. Srinivasan</a>,
-        <a href="https://dorverbin.github.io/">Dor Verbin</a>,
-		<strong>Jonathan T. Barron</strong>,
-        <a href="https://poolio.github.io/">Ben Poole</a>,
-        <a href="https://holynski.org/">Aleksander Holynski*</a>
-        <br>
-        <em>CVPR</em>, 2024
-        <br>
-        <a href="https://reconfusion.github.io/">project page</a>
-        /
-        <a href="https://arxiv.org/abs/">arXiv</a>
-        <p></p>
-        <p>
-        Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
-        </p>
-      </td>
-    </tr>
 
 <!-- <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()"> -->
 <!--   <td style="padding:20px;width:30%;vertical-align:middle"> -->
