--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
     <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
       <!-- 替换为静态图像 -->
-      <img src='images/archi_shorten.png' style="max-height: 100%; max-width: 100%;">
+      <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
