--- a/index.html
+++ b/index.html
@@ -98,6 +98,38 @@
   <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
     <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
       <!-- 替换为静态图像 -->
+      <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
+    </div>
+  </td>
+  <td style="padding:20px;width:75%;vertical-align:middle">
+<!--     <a href="https://reconfusion.github.io/"> -->
+      <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents Dataset</span>
+<!--     </a> -->
+    <br>
+    <!-- 作者等信息 -->
+	  Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu
+    <br>
+	  (* equal contribution)
+	<br>
+    Preprint 2024
+    <br>
+    <a href="mmina.cliangyu.com">project</a>
+    /
+    <a href="https://arxiv.org/abs/2404.09992">Paper</a>
+    <p></p>
+<!--     <p>
+    Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
+    </p> -->
+  </td>
+<!-- </tr> -->
+
+
+
+		  
+<tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
+  <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+    <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
+      <!-- 替换为静态图像 -->
       <img src='images/archi_shorten.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
@@ -121,32 +153,7 @@
   </td>
 </tr>
 
-<tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-  <td style="padding:20px;width:25%;vertical-align:middle; height: 200px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
-    <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
-      <!-- 替换为静态图像 -->
-      <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
-    </div>
-  </td>
-  <td style="padding:20px;width:75%;vertical-align:middle">
-<!--     <a href="https://reconfusion.github.io/"> -->
-      <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents Dataset</span>
-<!--     </a> -->
-    <br>
-    <!-- 作者等信息 -->
-	  Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu
-    <br>
-    Preprint 2024
-    <br>
-    <a href="mmina.cliangyu.com">project</a>
-    /
-    <a href="https://arxiv.org/abs/2404.09992">Paper</a>
-    <p></p>
-<!--     <p>
-    Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
-    </p> -->
-  </td>
-</tr>
+
 
 
 <!-- <tr onmouseout="difsurvey_stop()" onmouseover="difsurvey_start()"> -->
