--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <br>
 	  (* equal contribution)
 	<br>
-    Preprint 2024
+    <em>Preprint 2024</em>
     <br>
     <a href="mmina.cliangyu.com">project</a>
     /
@@ -121,7 +121,7 @@
     Using a multi-image diffusion model as a regularizer lets you recover high-quality radiance fields from just a handful of images.
     </p> -->
   </td>
-<!-- </tr> -->
+</tr>
 
 
 
@@ -141,7 +141,7 @@
     <!-- 作者等信息 -->
 	  Guo Jiang, Ziniu Zhang, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
     <br>
-    2023
+    <em>2023</em>
     <br>
     <a href="https://github.com/MichaelZona/FusionGAN/blob/main">project</a>
     /
