--- a/index.html
+++ b/index.html
@@ -95,13 +95,13 @@
           </tbody></table> -->
 
 <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-  <td style="padding:20px;width:25%;vertical-align:middle; height: 160px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+  <td style="padding:20px;width:25%;vertical-align:middle; height: 100px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
     <div class="one" style="height: 100%; display: flex; justify-content: center; align-items: center;">
       <!-- 替换为静态图像 -->
       <img src='images/teaser.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
-  <td style="padding:20px;width:75%;vertical-align:middle">
+  <td style="padding:20px;width:75%;vertical-align:middle;height: 100px;">
 <!--     <a href="https://reconfusion.github.io/"> -->
       <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents Dataset</span>
 <!--     </a> -->
@@ -123,7 +123,7 @@
   </td>
 </tr>
 
-<tr style="height: 10px;"></tr>
+<!-- <tr style="height: 10px;"></tr> -->
 
 
 		  
