--- a/index.html
+++ b/index.html
@@ -89,19 +89,17 @@
 
 
 		  
-<tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff"> <!-- 关闭高亮 -->
-  <td style="padding:20px;width:25%;vertical-align:middle; height: 100px;"> <!-- 设置固定高度，根据实际需要进行调整 -->
+<!-- <tr onmouseout="recon_stop()" onmouseover="recon_stop()" bgcolor="#ffffff">
+  <td style="padding:20px;width:25%;vertical-align:middle; height: 100px;">
     <div class="one" style="height: 130%; display: flex; justify-content: center; align-items: center;">
-      <!-- 替换为静态图像 -->
       <img src='images/archi_shorten.png' style="max-height: 100%; max-width: 100%;">
     </div>
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle">
-<!--     <a href="https://reconfusion.github.io/"> -->
       <span class="papertitle">Correction of Motion Artifact in MRI with Contextual and Cross-space Fusion</span>
-<!--     </a> -->
+
     <br>
-    <!-- 作者等信息 -->
+
 	  Guo Jiang, Ziniu Zhang, Xiaorong Pu, Junchi Liu, Yuting Wang, Yazhou Ren
     <br>
     <em>2023</em>
@@ -113,7 +111,7 @@
 
   </td>
 </tr>
-
+ -->
 
           
           <table width="100%" align="center" border="0" cellspacing="0" cellpadding="20"><tbody>
