--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   </td>
   <td style="padding:20px;width:75%;vertical-align:middle;height: 100px;">
 <!--     <a href="https://reconfusion.github.io/"> -->
-      <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents Dataset</span>
+      <span class="papertitle">MMInA: Benchmarking Multihop Multimodal Internet Agents</span>
 <!--     </a> -->
     <br>
     <!-- 作者等信息 -->
