--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 	<br>
     <em>Preprint 2024</em>
     <br>
-    <a href="mmina.cliangyu.com">project</a>
+    <a href="https://mmina.cliangyu.com">Project</a>
     /
     <a href="https://arxiv.org/abs/2404.09992">Paper</a>
     <p></p>
