--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <!-- 作者等信息 -->
 	  Ziniu Zhang*, Shulin Tian*, Liangyu Chen*, Ziwei Liu
     <br>
-	  (* equal contribution)
+	  (* equal contributions)
 	<br>
     <em>Preprint 2024</em>
     <br>
