--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">
-                  Ziniu Zhang
+                  Ziniu(Michael) Zhang
                 </p>
                 <p>
-                  Hi there! I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
+                  Hi there!&#x1F917; I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
                 </p>
                 <p>
                   Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. After that, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
@@ -153,6 +153,20 @@
 <!-- 		</p><p> -->
 		- Member of the technical consulting group of 2021 National Olympiad in Informatics in Provinces(NOIP).
 		<br>
+<!-- 		</p> -->
+              </td>
+            </tr>
+          </tbody></table>
+
+
+	<table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+              <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+                <h2>Backyard</h2>
+<!-- 		<p> -->
+		- Here is my Chinese <a href="https://www.cnblogs.com/keximeiruguo">blog</a>, it has been considered as my diary.&#x1F61D;
+		<br>
+                
 <!-- 		</p> -->
               </td>
             </tr>
