--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                   Hi there!&#x1F917; I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
                 </p>
                 <p>
-                  Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. After that, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
+                  Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. I really appreciate my journey as a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
                 </p>
                 <p>
                   Currently, I am a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a> working on multimodal agents. 
