--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
                 <h2>Backyard</h2>
 <!-- 		<p> -->
 		- Here is my Chinese <a href="https://www.cnblogs.com/keximeiruguo">blog</a>, it has been considered as my diary.&#x1F61D;
+		- I am very passionate about badminton&#x1F3F8; and have won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
                 
 <!-- 		</p> -->
