--- a/index.html
+++ b/index.html
@@ -165,9 +165,10 @@
                 <h2>Backyard</h2>
 <!-- 		<p> -->
 		- Here is my Chinese <a href="https://www.cnblogs.com/keximeiruguo">blog</a>, it has been considered as my diary.&#x1F61D;
+		<br>
 		- I am very passionate about badminton&#x1F3F8; and have won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
-                
+                - I am also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop (100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
 <!-- 		</p> -->
               </td>
             </tr>
