--- a/index.html
+++ b/index.html
@@ -168,8 +168,13 @@
 		<br>
 		- I am very passionate about badminton&#x1F3F8; and have won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
-                - I am also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop (100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
-<!-- 		</p> -->
+                - I'm also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop(100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
+		<br>
+		- I enjoy hiking &#x26F0;, skiing &#x26F7; (alpine skiing), ice skating &#x26F8;&#xFE0F;, and swimming &#x1F3CA;. Feel free to contact me if you have same interests!
+		<br>
+		- I served as the major volunteer in 31st FISU World University Games&#x1F3C3;.
+		      
+		      <!-- 		</p> -->
               </td>
             </tr>
           </tbody></table>
