--- a/index.html
+++ b/index.html
@@ -164,13 +164,11 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Backyard</h2>
 <!-- 		<p> -->
-		- Here is my Chinese <a href="https://www.cnblogs.com/keximeiruguo">blog</a>, it has been considered as my diary.&#x1F61D;
-		<br>
 		- I am passionate about badminton&#x1F3F8; and have won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
                 - I'm also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop(100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
 		<br>
-		- I enjoy hiking &#x26F0;, skiing &#x26F7; (alpine skiing), ice skating &#x26F8;&#xFE0F;, and swimming &#x1F3CA;. Feel free to contact me if you have same interests!
+		- I enjoy hiking &#x1F3D4;, skiing &#x1F3C2; (alpine skiing), ice skating &#x26F8;&#xFE0F;, and swimming &#x1F3CA;. Feel free to contact me if you have same interests!
 		<br>
 		- I served as the major volunteer in 31st FISU World University Games&#x1F3C3;.
 		      
