--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
 		<br>
                 - I'm also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop(100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
 		<br>
-		- I enjoy hiking &#x1F3D4;, skiing &#x1F3C2; (alpine skiing), ice skating &#x26F8;&#xFE0F;, and swimming &#x1F3CA;. Feel free to contact me if you have same interests!
+		- I enjoy hiking &#x26F0;&#xFE0F;, skiing &#x26F7;&#xFE0F; (alpine skiing), ice skating &#x26F8;&#xFE0F;, and swimming &#x1F3CA;. Feel free to contact me if you have same interests!
 		<br>
 		- I served as the major volunteer in 31st FISU World University Games&#x1F3C3;.
 		      
