--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                 <h2>Backyard</h2>
 <!-- 		<p> -->
-		- I am passionate about badminton&#x1F3F8; and have won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
+		- I am passionate about badminton&#x1F3F8; and won some medals in UESTC. My idols are Lin Dan, Chiharu Shida and Shi Yu Qi. 
 		<br>
                 - I'm also addicted in cycling&#x1F6B4;. I have completed routes such as the Chengdu Greenway Loop(100km), UESTC-Longquan Mount.(101km), UESTC-Dujiangyan(88km), and others. My goal is to cycle along G318 to Lhasa one day.
 		<br>
