--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <p>
                   Currently, I am a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a> working on multimodal agents. 
                 <p style="text-align:center">
-                  <a href="mailto:michaelzhangziniu@gmail.com">Email</a> &nbsp;/&nbsp;
+                  <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/Michael21208234">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/MichaelZona">Github</a>
                 </p>
