--- a/index.html
+++ b/index.html
@@ -23,14 +23,15 @@
                   Ziniu(Michael) Zhang
                 </p>
                 <p>
-                  Hi there!&#x1F917; I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning.
+                  Hi there!&#x1F917; I am a Ph.D Student in the <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> at <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I am fortunate to work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
+
                 </p>
                 <p>
-                  Previously, I was privileged to intern in <a href="https://diggers.ai/">Data Intelligence Group</a> advised by <a href="https://wenli-vision.github.io/">Prof. Wen Li</a>. I really appreciate my journey as a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a> specialized in test-time domain adaptation in 3D detection. Additionally, I spent two unforgettable years in the UESTC ACM-ICPC team.
-                </p>
-                <p>
-                  Currently, I am a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a> working on multimodal agents. 
-                <p style="text-align:center">
+                  Previously, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a>. I really appreciate this invaluable journey. 
+                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
+		</p>
+		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
+		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/Michael21208234">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/MichaelZona">Github</a>
