--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
                   After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
 		</p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
+		<p>
+		  I obtained my bachelor degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
+		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
                   <a href="https://twitter.com/Michael21208234">Twitter</a> &nbsp;/&nbsp;
