--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
     <a href="https://mmina.cliangyu.com">Project</a>
     /
     <a href="https://arxiv.org/abs/2404.09992">Paper</a>
+    /
+    <a href="https://www.youtube.com/watch?v=3xp007ZBK3g">Demo</a>
     <p></p>
 
   </td>
