--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 		</p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
 		<p>
-		  I obtained my bachelor degree in Computer Science (<a href="https://www.yingcai.uestc.edu.cn/">Honor College</a>) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
+		  I obtained my bachelor degree in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
 		</p>
 		<p style="text-align:center">
                   <a href="mailto:zhang.zini@northeastern.edu">Email</a> &nbsp;/&nbsp;
