--- a/index.html
+++ b/index.html
@@ -47,8 +47,13 @@
           </tbody></table>
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
               <tr>
+		<tr>
+    <td style="padding:20px;width:100%;text-align:center;vertical-align:middle">
+      <span style="font-family: 'Times New Roman', serif; font-weight: bold;">Believe in yourself</span>
+    </td>
+  </tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-		<i>"Beautiful things don't ask for attention"</i>
+
                 <h2>Research</h2>
                 <p>
 <!--                   I have a broad interest in computer vision tasks both in 2D pixel and 3D point cloud. Now my research is focused on using vision large language models to reason and make decisions.  -->
