--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
               <tr>
 		<tr>
     <td style="padding:20px;width:100%;text-align:center;vertical-align:middle">
-      <span style="font-family: 'Bradley Hand ITC', serif; font-weight: bold;">"Beautiful things don't ask for attention"</span>
+      <span style="font-family: 'Bradley Hand ITC', serif; font-weight: bold; font-size: 24px;">"Beautiful things don't ask for attention"</span>
     </td>
   </tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
