--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:40%;max-width:40%">
-                <a href="images/sydney.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/Opera.jpg" class="hoverZoomLink"></a>
+                <a href="images/sydney.jpg"><img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/sydney.jpg" class="hoverZoomLink"></a>
               </td>
             </tr>
           </tbody></table>
