--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
               <td style="padding:0px">
                 <br>
                 <p style="text-align:right;font-size:small;">
-                  Thanks a lot to <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a>!
+                  Thanks a lot to <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a> for his template!
                 </p>
               </td>
             </tr>
