--- a/index.html
+++ b/index.html
@@ -197,6 +197,10 @@
             <tr>
               <td style="padding:0px">
                 <br>
+		 <p style="text-align:right;font-size:small;">
+                  Last update: 7/7/2024
+                </p>
+		<br>
                 <p style="text-align:right;font-size:small;">
                   Thanks a lot to <a href="https://github.com/jonbarron/jonbarron_website">Jon Barron</a> for his template!
                 </p>
