--- a/index.html
+++ b/index.html
@@ -23,13 +23,13 @@
                   Ziniu(Michael) Zhang
                 </p>
                 <p>
-                  Hi there!&#x1F917; I am a Ph.D Student in the <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> at <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I am fortunate to work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
+                  Hi there!&#x1F917; I am a Ph.D Student in the <a href="https://www.khoury.northeastern.edu/">Khoury College of Computer Sciences</a> at <a href="https://www.northeastern.edu/">Northeastern University</a> starting from Fall 2024. I work with <a href="https://www.hongyangzhang.com/">Prof. Hongyang R. Zhang.</a> 
 
                 </p>
                 <p>
-                  Previously, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a>. I really appreciate this invaluable journey. 
-                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a> fortunately advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. 
-		</p>
+                  Previously, I was a visiting student in <a href="https://www.uq.edu.au/">the University of Queensland</a> advised by <a href="https://luoyadan.github.io">Prof. Yadan Luo</a>. 
+                  After that, I was a research intern in <a href="https://www.mmlab-ntu.com/">MMLAB@NTU</a>  advised by <a href="https://liuziwei7.github.io/"> Prof. Ziwei Liu</a>. I am extremely grateful to all the professors, mentors and friends who have helped me on my research journey!&#x1F496;
+		            </p>
 		<!-- I am a senior student majoring in Computer Science (Honor College) at <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a>. My interests span across computer vision and deep learning. -->
 		<p>
 		  I obtained my bachelor degree in Computer Science (Honor College) from <a href="https://en.uestc.edu.cn/">University of Electronic Science and Technology of China(UESTC)</a> in 2024.
@@ -158,9 +158,9 @@
 		- Volunteer in the 10th China Collegiate Programming Contest(CCPC) Final.
 		<br>
                 - Director of 2022 UESTC ACM-ICPC Training Project in Dynamic Programming.
-		<br>
+		<!-- <br> -->
 <!-- 		</p><p> -->
-		- Co-organizer of the selection of 2022 UESTC ACM-ICPC university team.
+		<!-- - Co-organizer of the selection of 2022 UESTC ACM-ICPC university team. -->
 		<br>
 <!-- 		</p><p> -->
 		- Member of the technical consulting group of 2021 National Olympiad in Informatics in Provinces(NOIP).
